[package]
name = "rust-wall"
version = "0.1.0"
edition = "2021"
authors = ["Steven Showers"]
license = "GPL-3.0-or-later"
description = "A Rust-based Bing wallpaper downloader"
repository = "https://github.com/stshow/rust-wall"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
